# AuroraV7

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  HARDWARE.md  LICENSE  Makefile  README.md  TODO.md  aurora-serial-init.d  aurora.sh  aurorav6.service  build.gyp  common.gypi  demo_machinations_192x96.json  demo_machinations_64x32.json  hires_plan.md  macbookpro_config.json  machinations-192x96.json  machinations-64x32.json  machinations-matrix-192x96.json  machinations-matrix-demo-192x96.json  machinations-patterngen-demo-192x96.json  pyproject.toml  requirements.txt
AuroraLEDs/: TeensyWS2801.h
aurora_web/: __init__.py  config.yaml  main.py
aurora_web/api/: __init__.py  custom_drawers.py  users.py
aurora_web/core/: __init__.py  beatnet_process.py  curated_palettes.py  drawer_manager.py  find_beats.py  output_factory.py  palette.py  rgbmatrix_process.py  serial_process.py  shared_frame.py  users.py
aurora_web/custom_drawers/example/: plasma.yaml  wave_pattern.yaml
aurora_web/drawers/: __init__.py  alien_blob.py  audio_viz.py  base.py  beat_bouncer.py  bzr.py  camera.py  custom.py  ginzburg_landau.py  gray_scott.py  off.py  reaction_diffusion.py  signal_grid.py  video.py
aurora_web/inputs/: __init__.py  audio_feed.py  canvas_feed.py  music_analyzer.py  video_feed.py
aurora_web/static/: app.js  index.html  style.css
aurora_web/tests/: __init__.py  conftest.py  dense_solo_repro.py  instrument_events.py  test_audio_feed.py  test_beat_bouncer.py  test_camera_drawer.py  test_canvas_feed.py  test_custom_drawer.py  test_display_e2e.py  test_drawer_manager.py  test_drawers.py  test_instrument_battery.py  test_main.py  test_music_analyzer.py  test_output_drivers.py  test_palette.py  test_shared_frame.py  test_signal_grid.py  test_users.py  test_video_feed.py
config/: demo_machinations_192x96.json  demo_machinations_64x32.json  machinations-64x32.json  machinations-matrix-192x96.json  serial-matrix-192x96.json  serial-matrix-32x18.json
docs/adr/: 0001-onset-detection-with-16th-note-quantization.md  0002-hub75-led-panel-wall-controller-and-power.md  0003-audio-feed-and-local-mac-capture.md  0004-music-feature-extraction.md  0005-unsupervised-source-discovery.md  0006-pitch-invariant-source-binding.md
firmware/: AuroraLEDs.ino
hardware/brackets/: README.md  bracket_config.example.yaml  generate_brackets.py
install/: aurora-web.service  aurorav7.service  install-aurora-web.sh  install-deps.sh  setup-rpi5-ubuntu.sh
src/: AddOn.cpp  AlienBlob.cpp  AlienBlob.h  Array2D.h  Aurora.cpp  AuroraClient.h  AuroraMatrix.cpp  AuroraPatternGen.cpp  AuroraServer.h  BeatBouncer.h  Bzr.cpp  Bzr.h  Camera.cpp  Camera.h  Colors.h  ComputerScreenMatrix.h  Controller.cpp  Controller.h  Drawer.h  FaceDetect.cpp  FaceDetect.h  FindBeats.h  GenImage.cpp  GenImage.h  GinzburgLandau.cpp  GinzburgLandau.h  GrayScott.cpp  GrayScott.h  HzellerRpiMatrix.h  Makefile  Matrix.h  Off.cpp  Off.h  Palette.cpp  Palette.h  ReactionDiffusion.cpp  ReactionDiffusion.h  RemoteMatrix.h  Serial.cpp  Serial.h  (+11 more)
src/cpp/: AuroraMatrix.cpp  AuroraPatternGen.cpp  AuroraServer.h  Camera.cpp  Camera.h  Colors.h  ComputerScreenMatrix.h  Controller.cpp  FaceDetect.cpp  FaceDetect.h  GinzburgLandau.h  GrayScott.cpp  GrayScott.h  Matrix.h  NoopMatrix.h  Off.h  ReactionDiffusion.cpp  Serial.cpp  SerialMatrix.h  Util.cpp  Util.h  Video.cpp  Video.h  bzr.py
src/protos/: Aurora.proto
stubs/kms/: __init__.py
tools/: led_test.py
